# banebooking

./: Dockerfile  Makefile  README.md  manage.py  pyproject.toml
banebooking/: asgi.py  settings.py  urls.py  wsgi.py
matchi/: slot_management.py  urls.py  views.py
matchi/migrations/: 0001_initial.py  0002_slotrule_rename_end_time_slot_end_datetime_and_more.py  0003_slot_slot_rule.py
matchi/templates/matchi/: calendar.html  models.py
